--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "restify-cors-middleware": "^1.1.1",
     "restify-routing": "^0.3.11",
     "underscore": "^1.9.1",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "sqlite3": "^4.2.0"
   }
 }
