--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.0.12",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.21.5",
+    "mocha": "^8.1.3",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "nodemon": "^2.0.4",
@@ -29,8 +30,8 @@
     "restify": "^7.2.1",
     "restify-cors-middleware": "^1.1.1",
     "restify-routing": "^0.3.11",
+    "sqlite3": "^4.2.0",
     "underscore": "^1.9.1",
-    "utf8": "^3.0.0",
-    "sqlite3": "^4.2.0"
+    "utf8": "^3.0.0"
   }
 }
