--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^10.2.0",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.0.0",
-    "@angular/material": "^7.0.7",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "ngx-image-zoom": "^0.6.0",
+    "ngx-infinite-scroll": "^9.1.0",
+    "ngx-mask": "^10.0.1",
+    "ngx-slick-carousel": "^0.5.1",
+    "ngx-swiper-wrapper": "^9.0.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.6.3",
     "tslib": "^1.9.0",
